[gd_scene load_steps=10 format=2]

[ext_resource path="res://Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://player2.tscn" type="PackedScene" id=2]
[ext_resource path="res://player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD2.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://assets (2)/dodge_assets/art/gameover.wav" type="AudioStream" id=7]
[ext_resource path="res://assets (2)/dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = 18.0
color = Color( 0.109804, 0.494118, 0.533333, 1 )
script = ExtResource( 6 )
mob_scene = ExtResource( 1 )

[node name="player2" parent="." instance=ExtResource( 2 )]

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( -8, 32 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="ScoreTimer2" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="StartPosition2" type="Position2D" parent="."]
position = Vector2( 260, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="HUD2" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="hit" from="player2" to="." method="_on_player2_hit"]
[connection signal="hit" from="player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="ScoreTimer2" to="." method="_on_ScoreTimer2_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
